# pass-wallet-app

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
axum-relay/: Cargo.toml  README.md  test_api.py
axum-relay/src/: main copy.rs  main.rs
enclave-kms/: README.md  enclave_api.py  enclave_kms.py  requirements.txt
nitro-enclave/: Cargo.toml  Dockerfile.client  Dockerfile.server  Makefile  NITRO_VSOCK.md  PASS_WALLET_API.md  README.md  TESTING_SUMMARY.md  nitro-enclave  run_tests.sh
nitro-enclave/src/: http_client.rs  http_main.rs  key_manager.rs  lib.rs  main.rs  pass_logic.rs  server_logic.rs
nitro-enclave/tests/: README.md  benchmark_tests.rs  functionality_tests.rs  integration_tests.rs  mod.rs  test_config.toml  throughput_report.sh
nitro-rs/: Cargo.toml  Dockerfile  README.md  test_client.rs
nitro-rs/src/: main.rs
nitro-vsock-example/: Cargo.toml  Dockerfile.client  Dockerfile.server  Makefile  client  server  vsock-sample
nitro-vsock-sample/: Cargo.toml  Makefile  README.md
nitro-vsock-sample/src/: http_client.rs  http_main.rs  lib.rs  main.rs  server_logic.rs
prisma/: schema.prisma
py-kms-sim/: README.md  enclave_api.py
server-enclave/: Cargo.toml  Dockerfile  README.md
server-enclave/src/: key_manager.rs  lib.rs  main.rs  pass_logic.rs  server_logic.rs
server-enclave/tests/: README.md  benchmark_tests.rs  functionality_tests.rs  integration_tests.rs  mod.rs  test_config.toml  throughput_report.sh
src/: constants.ts  types.ts  wagmi.ts
src/components/: AccountList.tsx  ActiveSessions.tsx  AssetBalanceDisplay.tsx  AssetTransferModal.tsx  DomainTransferModal.tsx  MessageModal.tsx  Navbar.tsx  RequestModal.tsx  TransferModal.tsx  WalletConnect.tsx  WalletConnectModal.tsx  WithdrawModal.tsx
src/hooks/: useConnectionDialog.ts
src/pages/: _app.tsx  index.tsx  mint.tsx  test-assets.tsx
src/pages/account/: [address].tsx
src/pages/api/: account.ts  index.ts  passwallets.ts  sign.ts  transfer.ts  transferDomain.ts
src/pages/api/account/: [address].ts  accountList.ts  connect.ts  respond.ts
src/pages/api/assets/: claim.ts  list.ts  monitorInbox.ts  transfer.ts  update.ts  view.ts  withdraw.ts
src/pages/api/provenance/: asset.ts  full.ts  subaccount.ts
src/pages/test/: monitor.tsx
src/services/: assetMonitor.ts  sign-client.ts  types.ts  walletkit.ts
src/store/: walletStore.ts
src/styles/: Home.module.css  Navbar.module.css
src/types/: index.ts
src/utils/: helper.ts  rpcSubmit.ts
