[package]
name = "nitro-enclave"
version = "0.1.0"
authors = ["Jay Yu", "The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"

[[bin]]
name = "nitro-enclave"
path = "src/main.rs"

[[bin]]
name = "http-server"
path = "src/http_main.rs"

[[bin]]
name = "test-pass-wallet"
path = "src/bin/test_pass_wallet.rs"

[dependencies]
clap = "3.2"
log = "0.4"
nix = "0.20"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
sha3 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
axum = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
lazy_static = "1.4"

[workspace]
