[package]
name = "server-enclave"
version = "0.1.0"
authors = ["Jay Yu"]
edition = "2018"

[[bin]]
name = "server-enclave"
path = "src/main.rs"

[dependencies]
clap = "3.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
rand = "0.8"
sha3 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
axum = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
lazy_static = "1.4"
# Transaction building and signing dependencies
rlp = "0.5"
nix = "0.20"
byteorder = "1.3"

[dev-dependencies]
# Additional dependencies for testing
tokio-test = "0.4"
criterion = "0.5"

[workspace]